# Cal

./: .gitignore  CMakeLists.txt  README.md
cmake/: modules.cmake
cmakes/: Modules.cmake
common/: CMakeLists.txt  index.cmake
common/src/: globals.hpp
common/src/base/: Utils.hpp
common/src/base/allocator/: Allocators.cpp
common/src/base/math/: Math.cpp
common/src/base/threading/: Action.hpp  SyncMutex.hpp
common/src/base/types/container/: BitSet.hpp  HashMap.hpp
common/src/system/io/: Stream.cpp
common/src/utils/: ArgsParser.hpp  StringBuilder.cpp  StringBuilder.hpp  TSingleton.hpp
compilier/: CMakeLists.txt
compilier/src/: compilier.hpp  main.cpp
compilier/src/analyzer/: Lexer.cpp  Lexer.hpp
compilier/src/analyzer/ast/: NodeBase.cpp  NodeBase.hpp  NodeType.cpp  NodeType.hpp
compilier/src/analyzer/ast/expr/: ExprNode.hpp  NumberNode.cpp  NumberNode.hpp  NumberNode.inl
compilier/src/analyzer/ast/types/: NodeType.cpp  NodeType.hpp  TypePool.cpp  TypePool.hpp
compilier/src/utils/: CPrintable.cpp  CPrintable.hpp
modules/: CMakeLists.txt
modules/CalBase/: CMakeLists.txt  index.cmake
modules/CalBase/src/: globals.hpp
modules/CalBase/src/base/: Lib.hpp  Logger.cpp  Logger.hpp  Utils.cpp
modules/CalBase/src/base/allocator/: Allocator.cpp  BaseProxyAllocator.cpp  LinearAllocator.cpp  PageAllocator.hpp  TagAllocator.hpp
modules/CalBase/src/base/math/: TMatrix.hpp  TQuat.cpp  TQuat.hpp  TTransform.hpp  TVector.cpp
modules/CalBase/src/base/threading/: Fiber.hpp  Sync.hpp  SyncSemaphore.hpp
modules/CalBase/src/base/types/: Hash.cpp  RingBuffer.hpp  String.cpp
modules/CalBase/src/base/types/container/: AssociativeArray.hpp  HashMap.hpp  List.hpp  List.inl.h  Queue.hpp  StackArray.hpp
modules/CalBase/src/system/: Environment.hpp  Sys.hpp  SysIO.hpp  SysTimer.hpp
modules/CalBase/src/system/io/: File.cpp  File.hpp  Path.cpp  Path.hpp  RingBuffer.hpp  Stream.hpp
modules/CalBase/src/system/macx/: Fiber.cpp  StdLibExt.cpp  Sync.cpp  Sys.cpp  Sys.mm  SysIO.cpp  SysIO.mm
modules/CalBase/src/utils/: ArgsParser.cpp  ArgsParser.hpp  StringBuilder.hpp
modules/CalCompilier/: CMakeLists.txt
modules/CalCompilier/src/: main.cpp
modules/CalCompilier/src/cal/ast/: ASTAssignmentNode.cpp  ASTAssignmentNode.hpp  ASTBlockNode.cpp  ASTBlockNode.hpp  ASTFuncCallNode.cpp  ASTFuncCallNode.hpp  ASTFuncDefNode.cpp  ASTFuncDefNode.hpp  ASTFuncReturnNode.cpp  ASTFuncReturnNode.hpp  ASTIdNode.cpp  ASTIdNode.hpp  ASTNewNode.cpp  ASTNewNode.hpp  ASTNodeBase.cpp  ASTNodeBase.hpp  ASTNumberNode.cpp  ASTNumberNode.hpp  ASTOPNode.cpp  ASTOPNode.hpp  ASTStructNode.cpp  ASTStructNode.hpp  ASTTypeNode.cpp  ASTTypeNode.hpp  ASTVarDefNode.cpp  ASTVarDefNode.hpp
modules/CalCompilier/src/cal/compilier/: Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  SyntaxAnalyzer.cpp  SyntaxAnalyzer.hpp
modules/CalCompilier/src/cal/compilier/precompile/: GrammarAnalyzer.cpp  GrammarAnalyzer.hpp  PreCompile.cpp  PreCompile.hpp  SyntaxAnalyzer.cpp  SyntaxAnalyzer.hpp
modules/CalCompilier/src/cal/utils/: ASTNodePool.hpp
modules/CalVM/: CMakeLists.txt
modules/CalVM/src/api/: VMApi.cpp  VMApi.h
modules/CalVM/src/vm/: Bytecode.hpp  VM.hpp
modules/CalVM/src/vm/base/: VMThread.hpp
modules/CalVM/src/vm/utils/: UTFString.cpp  UTFString.hpp
src/: globals.hpp  main.cpp
src/base/: Logger.cpp  Logger.hpp  Utils.hpp
src/base/allocator/: Allocator.cpp  Allocator.hpp  Allocators.cpp  Allocators.hpp  BaseProxyAllocator.hpp  IAllocator.hpp  LinearAllocator.cpp  LinearAllocator.hpp  PageAllocator.cpp  StackAllocator.hpp  TagAllocator.cpp
src/base/math/: Math.hpp  TMatrix.cpp  TTransform.cpp  TVector.hpp
src/base/threading/: Atomic.hpp  JobSys.cpp  JobSys.hpp  Thread.hpp
src/base/types/: Array.hpp  Hash.hpp  Span.hpp  Stack.hpp  String.hpp
src/cal/: CodeGenerator.cpp  CodeGenerator.hpp  Compiler.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  TypeChecker.cpp  TypeChecker.hpp  VM.hpp
src/cal/api/: VMApi.c  VMApi.h
src/cal/ast/: ASTAssignmentNode.cpp  ASTAssignmentNode.hpp  ASTBlockNode.cpp  ASTFuncCallNode.cpp  ASTFuncDefNode.cpp  ASTFuncReturnNode.cpp  ASTFuncReturnNode.hpp  ASTIdNode.cpp  ASTIdNode.hpp  ASTNodeBase.cpp  ASTNodeBase.hpp  ASTNodes.cpp  ASTNodes.hpp  ASTNumberNode.cpp  ASTNumberNode.hpp  ASTOPNode.hpp  ASTTypeNode.cpp  ASTTypeNode.hpp  ASTVarDefNode.cpp  ASTVarDefNode.hpp
src/cal/ast/asts/: AssignmentAST.cpp  BlockAST.cpp  FunctionAST.cpp  FunctionArgAST.cpp  FunctionCallAST.cpp  FunctionReturnAST.cpp  IdentifierAST.cpp  NumberAST.cpp  OpAST.cpp  TypeAST.cpp  VariableDeclearAST.cpp
src/cal/bytecode/: ByteCode.cpp  ByteCode.hpp  OpCodes.hpp
src/cal/compilier/: Lexer.hpp  Parser.cpp  Parser.hpp
src/cal/vm/: Bytecode.hpp  OpCodes.hpp  VM.hpp
src/system/: SIMD.hpp  StdLibExt.hpp  SysThreading.hpp
src/system/macx/: Atomic.cpp  Fiber.cpp  SysThreading.cpp  SysTimer.cpp  Thread.cpp
tests/: access_control_test.cal  class-test.cal  hello.cal  module-test.cal  oop-test.cal  oop-test2.cal  struct-test.cal  unsafe_test.cal
tests/compilier/: type_parse_test
